# scrapper-watchdog

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example.yaml
scraper_watchdog/: __init__.py  __main__.py  deployer.py  health_checker.py  logger.py  notifier.py  repairer.py  sandbox.py  watcher.py
scrapers/: example_scraper.py
tests/: test_watcher.py
