[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scraper-watchdog"
version = "0.1.0"
description = "Automatically detect and repair broken web scrapers using the Claude AI API."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Wassim", email = "wxssim@gmail.com" }]
keywords = ["web-scraping", "ai", "claude", "automation", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.25",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
scraper-watchdog = "scraper_watchdog.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["scraper_watchdog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["scraper_watchdog"]
omit = ["tests/*"]
